Fix top section pagination spacing, ensure content takes 100% width before auto margin applies

--- a/media/css/cms/pages/flare26-release-notes.css
+++ b/media/css/cms/pages/flare26-release-notes.css
@@ -36,6 +36,7 @@
 }
 
 .fl-l-release-notes-wrapper {
+    inline-size: 100%;
     margin-inline: auto;
     max-inline-size: min(
         (100% - var(--release-notes-padding)),
